--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -4,4 +4,14 @@ light-blue: #2081c3;
 dark-blue: #0a2c42;
 grey: #bfbfbf;
 font-family: Arial, Helvetica, sans-serif;
+}
 */
+
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    }
+    
+    nav{
+       background-color:#2081c3;
+       color:#f7f9f9 ;
+    }
